@@ -2,6 +2,12 @@
 
         Reviewed by Sam Weinig.
 
+        * kjs/debugger.h: Removed some unneeded includes and declarations.
+
+2008-09-21  Darin Adler  <darin@apple.com>
+
+        Reviewed by Sam Weinig.
+
         - https://bugs.webkit.org/show_bug.cgi?id=20972
           speed up Arguments further by eliminating the IndexToNameMap
 
